<resources>
    <string name="app_name">嗨社区</string>
    <string name="action_settings">Settings</string>
    <string name="tb_first">邻里</string>
    <string name="tb_third">服务</string>
    <string name="tb_second">服务 </string>
    <string name="tb_fourth">惠生活</string>
    <string name="tb_five">我的</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="tv_login_login">登录</string>
    <string name="tv_register_get_identifycode">获取验证码</string>
    <string name="tv_register_phone">手机号</string>
    <string name="tv_register_identify">验证码</string>
    <string name="tv_register_password">密码</string>
    <string name="tv_register_psdrepeat">重复密码</string>
    <string name="tv_register_regist">注册</string>
    <string name="tv_forget_modify">修改</string>
    <string name="tv_register_agree">注册即同意《嗨社区服务协议》</string>
    <string name="tv_become_worker_next">下一步</string>
    <string name="tv_become_worker">成为手艺人</string>
    <string name="tv_become_worker_withcard">持身份证照</string>
    <string name="tv_become_worker_idcardobverse">身份证正面</string>
    <string name="tv_become_worker_idcardback">身份证背面</string>
    <string name="tv_become_worker_notice">提示：持身份证照如图所示，需免冠、正面、无镜、顺光、露额；拍自己的上半身和手持身份证照片，且背景最好为白色，不化妆。身份证上的信息必须清晰可见</string>

    <!--toast messages-->
    <string name="toast_username_enpty">用户名不能为空</string>
    <string name="toast_password_enpty">密码不能为空</string>
    <string name="toast_Identfy_enpty">验证码不能为空</string>
    <string name="toast_password_NotSame">两次密码不一致</string>
    <string name="toast_login_success">登录成功</string>
    <string name="toast_login_failed">登录失败</string>
    <string name="toast_auth_success">授权成功</string>
    <string name="toast_auth_failed">授权失败</string>
    <string name="toast_press_to_exit">再按一次退出程序</string>
    <string name="ed_vallage_search_hint">搜索小区</string>
    <string name="dialog_btn_confim">确认</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_title_alert">提示</string>

    <string name="umeng_common_icon">icon</string>

    <string name="umeng_common_action_info_exist">正在下载中.</string>
    <string name="umeng_common_info_interrupt">下载出错啦，请检查网络后继续。</string>
    <string name="umeng_common_action_pause">暂停</string>
    <string name="umeng_common_action_continue">继续</string>
    <string name="umeng_common_action_cancel">取消</string>
    <string name="umeng_common_download_notification_prefix">正在下载: </string>
    <string name="umeng_common_pause_notification_prefix">暂停: </string>
    <string name="umeng_common_start_download_notification">正在下载应用</string>
    <string name="umeng_common_start_patch_notification">正在更新安装包</string>
    <string name="umeng_common_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_common_download_failed">下载失败</string>
    <string name="umeng_common_download_finish">下载完成，请点击安装</string>
    <string name="umeng_common_patch_finish">更新完成，请点击安装</string>
    <string name="umeng_common_silent_download_finish">新版本已经准备好，请点击安装</string>
    <string name="UMBreak_Network">未联网</string>
    <string name="UMUpdateTitle">发现新版本</string>
    <string name="UMNewVersion">最新版本: </string>
    <string name="UMUpdateContent">更新内容</string>
    <string name="UMUpdateSize">仅需要下载:</string>
    <string name="UMTargetSize">新版本大小:</string>
    <string name="UMGprsCondition">（提示：非WIFI环境）</string>
    <string name="UMUpdateNow">立即更新</string>
    <string name="UMAppUpdate">应用更新</string>
    <string name="UMNotNow">以后再说</string>
    <string name="UMIgnore">忽略该版</string>
    <string name="UMToast_IsUpdating">正在更新中....</string>
    <string name="UMDialog_InstallAPK">最新版本已下载，是否安装？</string>
    <string name="UMUpdateCheck">2.6.0.1.20150312</string>
    <string name="tb_munion_tip_download_prefix">正在下载:</string>

    <string name="str_format_itme_price">￥%s元</string>
    <string name="str_format_itme_prices">小计:￥%s元</string>
    <string name="str_format_itme_total_prices">合计:￥%s</string>
    <string name="str_format_item_count">共%s件商品</string>
    <string name="str_format_item_order_number">订单号:&#160;&#160;%s</string>
    <!--更新文本-->

    <string name="Update_Content">当前版本：%1$s\n最新版本：%2$s\n新版本大小：%3$s\n\n更新内容\n%4$s</string>
    <string name="Update_Content2">当前版本：%1$s\n最新版本：%2$s\n\n更新内容\n%3$s</string>

    <string name="Update_loaded_Content">当前版本：%1$s\n最新版本：%2$s\n最新版本已下载，是否安装？\n\n更新内容：\n%3$s</string>

    <string name="insert_card">插入卡</string>
    <string name="down_fail">下载失败</string>
    <string name="is_downing">正在下载</string>
    <string name="down_sucess">下载成功</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
