<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Defult_Color_ShallowGrey"
    android:orientation="vertical" >

    <include
        android:id="@+id/title"

        layout="@layout/title_mainlevel_justformain" />



    <LinearLayout
        android:id="@+id/main_tab_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/Defult_Color_AppGreen"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/Defult_Color_LineGrey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" >

            <ImageView
                android:id="@+id/main_tab_third"
                style="@style/tb_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:src="@mipmap/img_mainactivity_publish" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/main_tab_third"
                android:layout_marginLeft="12dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/main_tab_second"
                    style="@style/tb_tv"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/tab_second_selector"
                   android:gravity="bottom|center_horizontal"
                    android:text="@string/tb_third"
                    android:textColor="@color/defult_color_white" />
                <!-- 惠生活 -->

                <TextView
                    android:id="@+id/main_tab_fourth"
                    style="@style/tb_tv"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                   android:gravity="bottom|center_horizontal"
                    android:drawableTop="@drawable/tab_third_selector"
                    android:text="@string/tb_fourth"
                    android:textColor="@color/defult_color_white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_toRightOf="@id/main_tab_third" >

                <TextView
                    android:id="@+id/main_tab_firth"
                    style="@style/tb_tv"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="bottom|center_horizontal"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/tab_first_selector"
                    android:text="@string/tb_first"
                    android:textColor="@color/defult_color_white" />

                <TextView
                    android:id="@+id/main_tab_five"
                    style="@style/tb_tv"
                     android:layout_width="0dp"
                    android:layout_weight="1"
                     android:gravity="bottom|center_horizontal"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/tab_fourth_selector"
                    android:text="@string/tb_five"
                    android:textColor="@color/defult_color_white" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/main_Content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_tab_bottom"
        android:layout_below="@id/title"
        android:orientation="vertical" >
    </LinearLayout>
</RelativeLayout>